--- a/codingSiteRec.css
+++ b/codingSiteRec.css
@@ -86,7 +86,7 @@ button.jsp {
 }
 
 .dropdown-content p {
-  margin: 0;
+  margin: 1px;
   padding: 12px 16px;
   white-space: nowrap;
   transition: background-color 0.3s;
