--- a/css/codingSiteRec.css
+++ b/css/codingSiteRec.css
@@ -1,28 +1,60 @@
-.inner {
-  margin-top: 10%;
+body {
+  background-color: #e2e2e2;
+}
+.head {
+  background-color: rgb(44, 44, 44);
+  padding: 10px; /* Add padding for better spacing */
+}
+
+.nav-link {
+  color: rgb(145, 143, 141);
+  margin-right: 10px;
+  text-decoration: none; /* Remove default underline */
+  transition: color 0.3s; /* Add smooth color transition */
+}
+
+.nav-link:hover {
+  color: white; /* Change color on hover */
+}
+
+.top-btn {
+  padding-right: 15px;
+}
+
+.btn-danger {
+  background-color: #dc3545; /* Change button color to red */
+  border-color: #dc3545;
+}
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .center > h2 {
   padding-right: 5%;
   display: flex;
   justify-content: center;
 }
-
-ul > li {
+ul {
+  width: 1000px;
+}
+.center > ul > li {
   list-style-type: none;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 20px;
-}
-
-li a {
+  padding-left: 10%;
 }
 
 li button {
+  margin-top: 70%;
   padding-bottom: 25px;
   width: 125px;
   border-radius: 10px;
   padding-top: 25px;
+
   background-color: white;
   color: white;
   border: none;
@@ -37,11 +69,10 @@ li button:hover {
 }
 
 ul {
-  margin-top: 5%;
-  display: flex;
-  margin-left: 20%;
-  width: 50%;
-  justify-content: space-between;
+  width: 100%;
+  padding: 0; /* Remove default padding */
+  display: flex; /* Make it a flex container */
+  justify-content: center; /* Center the li elements horizontally */
 }
 
 button.java {
@@ -70,6 +101,7 @@ button.jsp {
 }
 
 .dropdown-content {
+  max-width: 10;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -96,15 +128,32 @@ button.jsp {
   padding: 12px 16px;
   text-decoration: none;
   color: #333;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .dropdown-content a:hover {
   background-color: #ddd;
+  color: #fff;
 }
 
 .dropdown:hover .dropdown-content {
   display: flex;
 }
 .dropdown {
+}
+.main {
+  background-color: rgb(88, 88, 88);
+  text-align: center;
+  color: rgb(236, 236, 236);
+  text-shadow: 5px 5px 10px rgb(0, 0, 0);
+}
+.head {
+  background-color: rgb(44, 44, 44);
+}
+.nav-link {
+  color: rgb(145, 143, 141);
+  margin-right: 10px;
+}
+.top-btn {
+  padding-right: 15px;
 }
